Added crazyfly firmware dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "inf3995/argos3-examples"]
 	path = inf3995/argos3-examples
 	url = https://github.com/MISTLab/argos3-examples.git
+[submodule "crazyflie-firmware"]
+	path = crazyflie-firmware
+	url = https://github.com/bitcraze/crazyflie-firmware.git
