--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "simulation/argos3"]
-	path = simulation/argos3
+[submodule "embedded/argos3"]
+	path = embedded/argos3
 	url = https://github.com/MISTLab/argos3.git
-[submodule "simulation/argos3-examples"]
-	path = simulation/argos3-examples
+[submodule "embedded/argos3-examples"]
+	path = embedded/argos3-examples
 	url = https://github.com/MISTLab/argos3-examples.git
+[submodule "embedded/crazyflie-firmware"]
+	path = embedded/crazyflie-firmware
+	url = git@github.com:bitcraze/crazyflie-firmware.git
