--- a/embedded/.vscode/tasks.json
+++ b/embedded/.vscode/tasks.json
@@ -8,7 +8,10 @@
             "options": {
 				"cwd": "${workspaceFolder}/argos3-examples"
 			},
-			"command": "rm -rf build && mkdir build && cd build && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug .. && ninja"
+			"command": [
+				"if test -d argos3-examples/build; then rm -r argos3-examples/build; fi &&",
+				"cd argos3-examples && mkdir build && cd build && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug .. && ninja"
+			]
 		},
 		{
 			"label": "Build Argos3",
@@ -17,7 +20,10 @@
 			"options": {
 				"cwd": "${workspaceFolder}/argos3"
 			},
-			"command": "rm -rf build_simulator && mkdir build_simulator && cd build_simulator && cmake -GNinja ../src -DCMAKE_BUILD_TYPE=Debug -DARGOS_BUILD_FOR=simulator -DARGOS_THREADSAFE_LOG=ON -DARGOS_DYNAMIC_LOADING=ON && ninja"
+			"command": [
+				"if test -d build_simulator; then rm -r build_simulator; fi &&", 
+				"mkdir build_simulator && cd build_simulator && cmake -GNinja ../src -DCMAKE_BUILD_TYPE=Debug -DARGOS_BUILD_FOR=simulator -DARGOS_THREADSAFE_LOG=ON -DARGOS_DYNAMIC_LOADING=ON && ninja"
+			]
 		},
 		{
 			"label": "Install Argos3",
