--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,41 +1,40 @@
 {
   "compilerOptions": {
-      "allowSyntheticDefaultImports": true,
-      "allowUnreachableCode": false,
-      "allowUnusedLabels": false,
-      "baseUrl": ".",
-      "declaration": true,
-      "esModuleInterop": true,
-      "experimentalDecorators": true,
-      "forceConsistentCasingInFileNames": true,
-      "importHelpers": true,
-      "jsx": "preserve",
-      "lib": [
-          "esnext",
-          "dom",
-          "dom.iterable",
-          "scripthost"
-      ],
-      "module": "esnext",
-      "moduleResolution": "node",
-      "noEmitOnError": true,
-      "noFallthroughCasesInSwitch": true,
-      "noImplicitReturns": true,
-      "paths": {
-          "@/*": [
-              "src/*"
-          ]
-      },
-      "pretty": true,
-      "skipLibCheck": true,
-      "sourceMap": true,
-      "strict": true,
-      "target": "esnext",
-      "types": [
-          "chai",
-          "mocha",
-          "webpack-env"
-      ]
+    "allowSyntheticDefaultImports": true,
+    "allowUnreachableCode": false,
+    "allowUnusedLabels": false,
+    "baseUrl": ".",
+    "declaration": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
+    "jsx": "preserve",
+    "lib": [
+        "esnext",
+        "dom",
+        "dom.iterable",
+        "scripthost"
+    ],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "paths": {
+        "@/*": [
+            "src/*"
+        ]
+    },
+    "pretty": true,
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "strict": true,
+    "target": "esnext",
+    "types": [
+        "jest",
+        "webpack-env"
+    ]
   },
   "exclude": [
       "node_modules"
