--- a/embedded/.devcontainer/devcontainer.json
+++ b/embedded/.devcontainer/devcontainer.json
@@ -6,13 +6,17 @@
 	},
 	"extensions": [
 		"ms-vscode.cpptools",
+		"ms-vscode.cpptools-extension-pack",
 		"xaver.clang-format",
-		"visualstudioexptteam.vscodeintellicode",
-		"zixuanwang.linkerscript",
+		"twxs.cmake",
+		"ms-vscode.cmake-tools",
 		"cschlosser.doxdocgen",
+		"zixuanwang.linkerscript",
 		"pkief.material-icon-theme",
-		"editorconfig.editorconfig",
-		"mhutchie.git-graph"
+		"ms-python.vscode-pylance",
+		"ms-python.python",
+		"visualstudioexptteam.vscodeintellicode",
+		"jeff-hykin.better-cpp-syntax",
 	],
 	"workspaceFolder": "/workspaces/INF3995-106/embedded",
 	"runArgs": [
