--- a/embedded/.vscode/settings.json
+++ b/embedded/.vscode/settings.json
@@ -3,5 +3,6 @@
 	"clang-format.fallbackStyle": "Google",
 	"C_Cpp.clang_format_fallbackStyle": "Google",
 	"C_Cpp.formatting": "clangFormat",
-	"C_Cpp.loggingLevel": "Warning"
+	"C_Cpp.loggingLevel": "Warning",
+	"cmake.configureOnOpen": false
 }
