--- a/embedded/.vscode/tasks.json
+++ b/embedded/.vscode/tasks.json
@@ -5,11 +5,11 @@
 			"label": "Compile Argos Examples",
 			"type": "shell",
 			"detail": "Clone and compile argos examples in workspace folder ",
-            "options": {
+			"options": {
 				"cwd": "${workspaceFolder}/argos3-examples"
 			},
 			"command": [
-				"if test -d /build; then rm -r /build; fi &&",
+				"if test -d build; then rm -rf build; fi &&",
 				"mkdir build && cd build && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug .. && ninja"
 			]
 		},
@@ -21,7 +21,7 @@
 				"cwd": "${workspaceFolder}/argos3"
 			},
 			"command": [
-				"if test -d build_simulator; then rm -r build_simulator; fi &&", 
+				"if test -d build_simulator; then rm -r build_simulator; fi &&",
 				"mkdir build_simulator && cd build_simulator && cmake -GNinja ../src -DCMAKE_BUILD_TYPE=Debug -DARGOS_BUILD_FOR=simulator -DARGOS_THREADSAFE_LOG=ON -DARGOS_DYNAMIC_LOADING=ON && ninja"
 			]
 		},
@@ -44,14 +44,38 @@
 			"command": "chmod +x build_simulator/argos_post_install.sh && ./build_simulator/argos_post_install.sh && echo '\nsource ${workspaceFolder}/argos3/build_simulator/setup_env.sh\n' >> /.bashrc"
 		},
 		{
-			"label": "Setup Argos3",
-			"dependsOn": ["Build Argos3", "Install Argos3", "Post install Argos3 script"],
+			"label": "Install Argos3 Package",
+			"type": "shell",
+			"detail": "Install argos3 from .deb package",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"command": "dpkg -i argos3*.deb"
+		},
+		{
+			"label": "Setup Argos3 from sources",
+			"dependsOn": [
+				"Build Argos3",
+				"Install Argos3",
+				"Post install Argos3 script"
+			],
 			"dependsOrder": "sequence",
 		},
 		{
 			"label": "Setup Simulation",
-			"dependsOn": ["Setup Argos3", "Compile Argos Examples"],
-			"dependsOrder": "sequence",
+			"dependsOn": [
+				"Install Argos3 Package",
+				"Compile Argos Examples"
+			],
+			"dependsOrder": "sequence"
+		},
+		{
+			"label": "Flash embedded firmware",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/embedded-firmware"
+			},
+			"command": "make clean && make -j`nproc` && make cload"
 		},
 	]
 }
