--- a/embedded/.vscode/tasks.json
+++ b/embedded/.vscode/tasks.json
@@ -14,6 +14,17 @@
 			]
 		},
 		{
+			"label": "Compile Simulation Code",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/simulation"
+			},
+			"command": [
+				"if test -d build; then rm -rf build; fi &&",
+				"mkdir build && cd build && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug .. && ninja"
+			]
+		},
+		{
 			"label": "Build Argos3",
 			"type": "shell",
 			"detail": "Builds argos3 repo from source",
