--- a/embedded/simulation/CMakeLists.txt
+++ b/embedded/simulation/CMakeLists.txt
@@ -21,4 +21,5 @@ include_directories(${CMAKE_SOURCE_DIR} ${ARGOS_INCLUDE_DIRS} ${LUA_INCLUDE_DIR}
 link_directories(${ARGOS_LIBRARY_DIRS})
 
 # Descend into subdirectories
+add_subdirectory(src)
 add_subdirectory(crazyflie)
