--- a/embedded/simulation/crazyflie/CMakeLists.txt
+++ b/embedded/simulation/crazyflie/CMakeLists.txt
@@ -2,4 +2,6 @@ add_library(crazyflie_sensing SHARED crazyflie_sensing.h crazyflie_sensing.cpp)
 target_link_libraries(crazyflie_sensing
   argos3core_simulator
   argos3plugin_simulator_crazyflie
-  argos3plugin_simulator_genericrobot)
+  argos3plugin_simulator_genericrobot
+  shared_firmware
+  simulation_firmware)
