Landing and Taking off in simulation

--- a/embedded/CMakeLists.txt
+++ b/embedded/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 # These includes are needed by the shared-firmware and by the simulation-firmware
 include_directories("${CMAKE_SOURCE_DIR}/shared-firmware/include/")
+include_directories("${CMAKE_SOURCE_DIR}/simulation/crazyflie/")
 
 add_subdirectory(shared-firmware)
 add_subdirectory(simulation)
