--- a/embedded/.vscode/tasks.json
+++ b/embedded/.vscode/tasks.json
@@ -36,7 +36,7 @@
 			"label": "Setup Simulation",
 			"dependsOn": [
 				"Install Argos3 Package",
-				"Compile Argos Examples"
+				"Compile Simulation Firmware"
 			],
 			"dependsOrder": "sequence"
 		},
