--- a/embedded/simulation/crazyflie/CMakeLists.txt
+++ b/embedded/simulation/crazyflie/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(crazyflie_sensing SHARED crazyflie_sensing.h crazyflie_sensing.cpp)
+target_compile_features(crazyflie_sensing PRIVATE cxx_std_17)
 target_link_libraries(crazyflie_sensing
   argos3core_simulator
   argos3plugin_simulator_crazyflie
