--- a/embedded/.devcontainer/devcontainer.json
+++ b/embedded/.devcontainer/devcontainer.json
@@ -29,9 +29,10 @@
 	],
 	"mounts": [
 		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind",
+    "source=/tmp/socket/,target=/tmp/socket/,type=bind",
 	],
 	"remoteEnv": {
 		"QT_X11_NO_MITSHM": "1"
 	},
-	"initializeCommand": "xhost +local:docker"
+	"initializeCommand": "mkdir /tmp/socket/ &> /dev/null && xhost +local:docker"
 }
