--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,19 @@ services:
       file: ./database/docker-compose.yml
       service: mongo
     container_name: mongo
+
   vue:
     extends:
       file: ./frontend/docker-compose.yml
       service: inf3995-vue-app
-     
     container_name: vue
+  
+  flask:
+    extends:
+      file: ./backend/docker-compose.yml
+      service: inf3995-backend
+    container_name: backend
+
   basic_embedded:
     extends:
       file : ./embedded/docker-compose.yml
@@ -20,6 +27,7 @@ services:
     container_name: embedded
     profiles:
       - basic
+      
   nvidia_embedded:
     extends:
       file : ./embedded/nvidia-docker/docker-compose.yml
