--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,7 @@ FROM node:16.13.2-alpine3.14 as build-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
+EXPOSE 8080
 CMD ["npm", "run", "serve"] # For dev
 
 # When we deploy app for production
