--- a/embedded/nvidia-docker/docker-compose.yml
+++ b/embedded/nvidia-docker/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - /tmp/socket
-      
+    network_mode: host
+    
     deploy:
       resources:
         reservations:
