Renamed to timer.h

--- a/embedded/embedded-firmware/Makefile
+++ b/embedded/embedded-firmware/Makefile
@@ -5,7 +5,7 @@ APP_STACKSIZE=300
 
 VPATH += src/
 VPATH += ../shared-firmware/
-PROJ_OBJ += commands_handler.o communication_manager.o firmware_controller.o navigation_system.o utils.o app_main.o
+PROJ_OBJ += commands_handler.o communication_manager.o firmware_controller.o navigation_system.o timer.o app_main.o
 
 CRAZYFLIE_BASE=../crazyflie-firmware
 
