--- a/embedded/.devcontainer/devcontainer.json
+++ b/embedded/.devcontainer/devcontainer.json
@@ -20,16 +20,16 @@
 	],
 	"workspaceFolder": "/workspaces/INF3995-106/embedded",
 	"runArgs": [
-		//"--privileged",
-		//"--net=host",
-		//"--device=/dev/ttyUSB0",
-		"--gpus=all", //Uncomment to use NVDIA GPU
+	  "--privileged",
+		"--net=host",
+		"--device=/dev/ttyUSB0",
+		//"--gpus=all", //Uncomment to use NVDIA GPU
 		"-e",
 		"DISPLAY=${env:DISPLAY}",
 	],
 	"mounts": [
 		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind",
-    "source=/tmp/socket/,target=/tmp/socket/,type=bind",
+    	"source=/tmp/socket/,target=/tmp/socket/,type=bind",
 	],
 	"remoteEnv": {
 		"QT_X11_NO_MITSHM": "1"
