Fixed docker-compose and dockerfiles for launch

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2.2"
+version: "2.3"
 
 services:
   inf3995-backend:
@@ -12,7 +12,7 @@ services:
       - ./:/app
       - /app/node_modules
       - /dev:/dev
-      - /tmp/socket
+      - /tmp/socket:/tmp/socket
     network_mode: host
-    
+
     
