--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
   "editor.tabSize": 2,
-  "editor.insertSpaces": true
+  "editor.insertSpaces": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
