Commencer la simulation n'importe quand

--- a/backend/.devcontainer/Dockerfile
+++ b/backend/.devcontainer/Dockerfile
@@ -2,3 +2,5 @@ ARG VARIANT=3.8
 FROM mcr.microsoft.com/vscode/devcontainers/python:${VARIANT}
 
 RUN pip install flask flask-CORS flask-pyMongo flask-socketio gevent gevent-websocket cflib
+
+EXPOSE 5000
