--- a/embedded/.vscode/launch.json
+++ b/embedded/.vscode/launch.json
@@ -1,15 +1,63 @@
 {
     "version": "0.2.0",
     "configurations": 
-    [{   "name": "(gdb) Attach",
-         "type": "cppdbg", 
-         "request": "attach", 
-         "program" :  "/usr/local/bin/argos3", 
-         "processId": "${command:pickProcess}",
-         "MIMode": "gdb", 
-         "setupCommands": 
-             [ { "description": "Enable pretty-printing for gdb", 
-                 "text": "-enable-pretty-printing","ignoreFailures": true
-                 } ]
-     }]
+    [
+      {
+        "name": "Argos",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "/usr/local/bin/argos3",
+        "args": [
+          "-c", "experiments/${input:argos_experiment}",
+        ],
+        "cwd": "${workspaceFolder}/simulation",
+        "MIMode": "gdb",
+        "setupCommands": 
+        [ 
+          {
+            "description": "Enable pretty-printing for gdb", 
+            "text": "-enable-pretty-printing",
+            "ignoreFailures": true
+          } 
+        ]
+      },
+      {
+        "name": "Stub Server",
+        "request": "launch",
+        "type": "python",
+        "program": "ServerStub.py",
+        "console": "integratedTerminal"
+      },
+      // {
+      //   "name": "Embedded",
+      //   "cwd": "${workspaceRoot}",
+      //   "executable": "./cf2.elf",
+      //   "request": "launch",
+      //   "type": "cortex-debug",
+      //   "device": "STM32F405",
+      //   "svdFile": "STM32F405.svd",
+      //   "servertype": "openocd",
+      //   "configFiles": ["interface/stlink-v2.cfg", "target/stm32f4x.cfg"],
+      //   "runToMain": true,
+      //   "preLaunchCommands": [
+      //     "set mem inaccessible-by-default off",
+      //     "enable breakpoint",
+      //     "monitor reset"
+      //   ]
+      // }
+    ],
+    "compounds": [
+      {
+        "name": "Debug Simulation",
+        "configurations": ["Argos", "Stub Server"]
+      }
+    ],
+    "inputs": [
+      {
+        "id": "argos_experiment",
+        "type": "promptString",
+        "default": "crazyflie_sensing.argos",
+        "description": "Default experiment"
+      }
+    ]
  }
