Started to implement gtest.. Everything is working perfectly well. You don't need to worry.

--- a/embedded/embedded-firmware/Makefile
+++ b/embedded/embedded-firmware/Makefile
@@ -11,6 +11,7 @@ CRAZYFLIE_BASE=../crazyflie-firmware
 
 CXXFLAGS+=-I../crazyflie-firmware/src/modules/
 CXXFLAGS+=-I../shared-firmware/include/
+CXXFLAGS+=-Iinclude/
 
 
 include $(CRAZYFLIE_BASE)/Makefile
