--- a/frontend/.gitlab-ci.yml
+++ b/frontend/.gitlab-ci.yml
@@ -41,7 +41,7 @@ install_dependencies:
       - $WORKING_DIRECTORY/node_modules/
   script:
     - cd $WORKING_DIRECTORY
-    - npm ci --cache
+    - npm ci
   only:
     changes:
       - $WORKING_DIRECTORY/package-lock.json
