--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
+  "editor.detectIndentation": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
   }
