Added tests for shared_firmware

--- a/embedded/shared-firmware/CMakeLists.txt
+++ b/embedded/shared-firmware/CMakeLists.txt
@@ -1,3 +1,3 @@
-FILE(GLOB PROJECT_SRC *.cc)
+FILE(GLOB PROJECT_SRC src/*.cc)
 add_library(shared_firmware SHARED ${PROJECT_SRC})
 target_compile_features(shared_firmware PRIVATE cxx_std_17)
