Communication working server-drone

--- a/embedded/.vscode/launch.json
+++ b/embedded/.vscode/launch.json
@@ -12,6 +12,7 @@
         ],
         "cwd": "${workspaceFolder}/simulation",
         "MIMode": "gdb",
+        "preLaunchTask": "Setup Simulation",
         "setupCommands": 
         [
           {
