--- a/embedded/CMakeLists.txt
+++ b/embedded/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 set(CMAKE_CXX_FLAGS "-Wall -Wextra -g -O0")
+set(CMAKE_C_FLAGS "-g -O0")
 
 # These includes are needed by the shared-firmware and by the simulation-firmware
 include_directories("${CMAKE_SOURCE_DIR}/shared-firmware/include/")
