--- a/embedded/.vscode/tasks.json
+++ b/embedded/.vscode/tasks.json
@@ -47,7 +47,7 @@
 			"options": {
 				"cwd": "${workspaceFolder}/embedded-firmware"
 			},
-			"command": "make clean && make -j`nproc` && make cload"
+			"command": "make clean && make -j`nproc` && make cload radio=${input:radio}",
 		},
 		{
 			"label": "Compile Embedded Firmware",
@@ -58,5 +58,17 @@
 			},
 			"command": "make clean && make -j`nproc`"
 		},
-	]
+	],
+  "inputs": [
+    {
+      "id": "radio",
+      "type": "pickString",
+      "default": "radio://0/80/2M/E7E7E7E761",
+      "description": "Radio adress to flash drone",
+      "options": [
+        "radio://0/80/2M/E7E7E7E761",
+        "radio://0/80/2M/E7E7E7E762",
+      ],
+    }
+  ]
 }
