embedded working with logs

--- a/embedded/embedded-firmware/Makefile
+++ b/embedded/embedded-firmware/Makefile
@@ -9,8 +9,8 @@ PROJ_OBJ += commands_handler.o communication_manager.o firmware_controller.o nav
 
 CRAZYFLIE_BASE=../crazyflie-firmware
 
-CXXFLAGS+=-I../crazyflie-firmware/src/modules/
-CXXFLAGS+=-I../shared-firmware/include/
-
+CXXFLAGS += -I../crazyflie-firmware/src/modules/
+CXXFLAGS += -I../shared-firmware/include/
+CXXFLAGS += '-Wno-write-strings'
 
 include $(CRAZYFLIE_BASE)/Makefile
