--- a/embedded/.vscode/settings.json
+++ b/embedded/.vscode/settings.json
@@ -11,6 +11,7 @@
     "*.cc": "cpp",
     "*.cpp": "cpp",
     "*.h": "cpp",
+    "variant": "c"
   },
   "editor.tabSize": 2,
   "editor.detectIndentation": false,
