madded mission interface in backend and frontend, also added routes in frontened and backend

--- a/backend/.vscode/tasks.json
+++ b/backend/.vscode/tasks.json
@@ -12,6 +12,11 @@
             "command": "pylint test --rcfile pylintrc"
         },
         {
+            "label": "Lint server",
+            "type": "shell",
+            "command": "pylint server.py --rcfile pylintrc"
+        },
+        {
             "label": "Run tests",
             "type": "shell",
             "command": "pytest"
