--- a/embedded/.devcontainer/devcontainer.json
+++ b/embedded/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 	"name": "INF3995 - Dream Team",
 	"dockerFile": "./Dockerfile",
 	"settings": {
-		"terminal.integrated.defaultProfile.linux": "zsh",
+		"terminal.integrated.defaultProfile.linux": "zsh"
 	},
 	"extensions": [
 		"ms-vscode.cpptools",
@@ -24,13 +24,14 @@
 	  "--privileged",
 		"--net=host",
 		"--device=/dev/",
-		// "--gpus=all", //Uncomment to use NVDIA GPU
+		"--name=embedded",
+		//"--gpus=all", //Uncomment to use NVDIA GPU
 		"-e",
-		"DISPLAY=${env:DISPLAY}",
+		"DISPLAY=${env:DISPLAY}"
 	],
 	"mounts": [
 		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind",
-    "source=/tmp/socket/,target=/tmp/socket/,type=bind",
+		"source=/tmp/socket/,target=/tmp/socket/,type=bind"
 	],
 	"remoteEnv": {
 		"QT_X11_NO_MITSHM": "1"
