--- a/embedded/.devcontainer/devcontainer.json
+++ b/embedded/.devcontainer/devcontainer.json
@@ -17,7 +17,7 @@
 		"ms-python.python",
 		"visualstudioexptteam.vscodeintellicode",
 		"jeff-hykin.better-cpp-syntax",
-		"marus25.cortex-debug"
+		"marus25.cortex-debug@0.4.0"
 	],
 	"workspaceFolder": "/workspaces/INF3995-106/embedded",
 	"runArgs": [
@@ -27,10 +27,13 @@
 		// "--gpus=all", //Uncomment to use NVDIA GPU
 		"-e",
 		"DISPLAY=${env:DISPLAY}",
+		"--device-cgroup-rule=a 166:* rwm",
+		"--device-cgroup-rule=a 189:* rwm",
 	],
 	"mounts": [
 		"source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind",
     "source=/tmp/socket/,target=/tmp/socket/,type=bind",
+		"source=/etc/udev/rules.d,target=/etc/udev/rules.d,type=bind"
 	],
 	"remoteEnv": {
 		"QT_X11_NO_MITSHM": "1"
