--- a/embedded/.vscode/tasks.json
+++ b/embedded/.vscode/tasks.json
@@ -9,7 +9,7 @@
 			},
 			"command": [
 				"if test -d build; then rm -rf build; fi &&",
-				"mkdir build && cd build && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug ../../ && ninja"
+				"mkdir build && cd build && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ../../ && ninja"
 			]
 		},
 		{
@@ -31,9 +31,9 @@
 				"cwd": "${workspaceFolder}"
 			},
 			"command": "dpkg -i argos3*.deb",
-      "runOptions": { 
-        "runOn": "folderOpen" 
-      }
+			"runOptions": { 
+				"runOn": "folderOpen" 
+			}
 		},
 		{
 			"label": "Flash embedded firmware",
@@ -41,7 +41,7 @@
 			"options": {
 				"cwd": "${workspaceFolder}/embedded-firmware"
 			},
-			"command": "make clean && make -j`nproc` && make cload radio=${input:radio}",
+			"command": "make clean && make -j`nproc` && make cload radio=${input:radio}"
 		},
 		{
 			"label": "Compile Embedded Firmware",
@@ -52,17 +52,70 @@
 			},
 			"command": "make clean && make -j`nproc`"
 		},
+		{
+			"label": "Test embedded firmware",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/embedded-firmware/validate"
+			},
+			"command": "rm -r build && mkdir build && cd build && cmake ../ && make -j`nproc` && ./embedded_firmware"
+		},
+		{
+			"label": "Test shared firmware",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/shared-firmware/validate"
+			},
+			"command": "rm -r build && mkdir build && cd build && cmake ../ && make -j`nproc` && ./shared_firmware"
+		},
+		{
+			"label": "Test simulation firmware",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/simulation/validate"
+			},
+			"command": "rm -r build && mkdir build && cd build && cmake ../ && make -j`nproc` && ./simulation_firmware"
+		},
+		{
+			"label": "Test all",
+			"type": "shell",
+			"dependsOn": [
+				"Test embedded firmware",
+				"Test shared firmware",
+				"Test simulation firmware"
+			]
+		},
+		{
+			"label": "lint simulation firmware",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/simulation/"
+			},
+			"dependsOn" : [
+				"Compile Simulation Firmware"
+			],
+			"command": "cd build && ../../run-clang-tidy.py -checks=\"-*,boost-*,,bugprone-*,clang-analyzer-*,concurrency-*,cppcoreguidelines-*,google-*,misc-*,modernize-*,performance-*,portability-*,readability-*,-modernize-use-trailing-return-type\""
+		},
+		
+		{
+			"label": "lint embedded firmware",
+			"type": "shell",
+			"options": {
+				"cwd": "${workspaceFolder}/embedded-firmware/"
+			},
+			"command": "../run-clang-tidy.py -checks=\"-*,boost-*,,bugprone-*,clang-analyzer-*,concurrency-*,cppcoreguidelines-*,google-*,misc-*,modernize-*,performance-*,portability-*,readability-*,-modernize-use-trailing-return-type\""
+		}
 	],
-  "inputs": [
-    {
-      "id": "radio",
-      "type": "pickString",
-      "default": "radio://0/80/2M/E7E7E7E761",
-      "description": "Radio adress to flash drone",
-      "options": [
-        "radio://0/80/2M/E7E7E7E761",
-        "radio://0/80/2M/E7E7E7E762",
-      ],
-    }
-  ]
+	"inputs": [
+		{
+			"id": "radio",
+			"type": "pickString",
+			"default": "radio://0/80/2M/E7E7E7E761",
+			"description": "Radio adress to flash drone",
+			"options": [
+				"radio://0/80/2M/E7E7E7E761",
+				"radio://0/80/2M/E7E7E7E762"
+			]
+		}
+	]
 }
