--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,3 +14,17 @@ frontend:
     - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
       changes:
         - frontend/**/*
+
+embedded:
+  stage: triggers
+  trigger:
+    include: 
+      - local: '/embedded/.gitlab-ci.yml'
+    strategy: depend
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      changes:
+        - embedded/**/*
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+      changes:
+        - embedded/**/*
